[package]
name = "uasset_helper"
version = "0.1.0"
edition = "2021"
authors = ["Vitalii Lukyanov <tukanoid@outlook.com>"]

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
color-eyre = "0.6.2"
smart-default = "0.6.0"

log = "0.4.17"
pretty_env_logger = "0.4.0"
fmtools = "0.1.2"

itertools = "0.10.5"
walkdir = "2.3.2"
builder-pattern = "0.4.2"
dirs = "4.0.0"
enum-iterator = "1.2.0"

uasset = { version = "0.4.1", features = ["commandline-tool"] }
num-traits = "0.2.15"

iced = { version = "0.4.2", features = ["image", "pure", "svg", "tokio"] }
iced_native = "0.5.1"
iced_aw = { version = "0.2.0", features = ["icons"] }
graphviz-rust = "0.3.0"
rfd = "0.10.0"
git2 = "0.15"

arboard = { version = "3.2.0", features = ["wayland-data-control"] }
indicatif = "0.17.1"